gccida/g0/dump_global_regs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_global_regs/src/global.c:2453:16: error: use of undeclared identifier 'off_779681'
fprintf( file, off_779681, ( unsigned int)ia); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_global_regs/src/obj/global.o] Error 1
